# cnfunds

./: README.md  main.py  pyproject.toml  requirements.txt  全市场指数基金信息.csv
cnfunds/: main.py
